Added adition style and tags

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,57 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
 
 .panels {
     display: flex;
+    flex-direction: row;
+    height: 100%;
 }
+
+.panel {
+    flex: 1;
+    padding: 12px;
+    border-radius: 8px;
+}
+
+.panel-name-list {
+    background-color: var(--rose);
+}
+
+.panel-answering {
+    background-color: var(--blue);
+}
+
+.panel-answered {
+    background-color: var(--yellow);
+}
+
+.name-list {
+    min-height: 0;
+    overflow-y: auto;
+}
+
+.name-item {
+    background-color: white;
+    padding: 8px;
+    border-radius: 8px;
+    font-size: 24px;
+}
+
+.name-item:not(:last-of-type) {
+    margin-bottom: 8px;
+}
+
+.button {
+    margin-inline: 2px;
+    min-width: 100px;
+    padding: 8px;
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    background-color: var(--grey);
+}
+
+
+
+
+
+
 
