--- a/styles/style.css
+++ b/styles/style.css
@@ -3,40 +3,42 @@
     display: flex;
     flex-direction: row;
     height: 100%;
-}
 
-.panel {
-    flex: 1;
-    padding: 12px;
-    border-radius: 8px;
-}
+    .panel {
+        flex: 1;
+        padding: 12px;
+        border-radius: 8px;
+    }
 
-.panel-name-list {
-    background-color: var(--rose);
-}
 
-.panel-answering {
-    background-color: var(--blue);
-}
+    .panel-name-list {
+        background-color: var(--rose);
+    }
 
-.panel-answered {
-    background-color: var(--yellow);
+    .panel-answering {
+        background-color: var(--blue);
+    }
+
+    .panel-answered {
+        background-color: var(--yellow);
+    }
+
 }
 
 .name-list {
     min-height: 0;
     overflow-y: auto;
-}
 
-.name-item {
-    background-color: white;
-    padding: 8px;
-    border-radius: 8px;
-    font-size: 24px;
-}
+    .name-item {
+        background-color: white;
+        padding: 8px;
+        border-radius: 8px;
+        font-size: 24px;
 
-.name-item:not(:last-of-type) {
-    margin-bottom: 8px;
+        &:not(:last-of-type) {
+            margin-bottom: 8px;
+        }
+    }
 }
 
 .button {
